added frontend part of authentication